log/build_2021-08-31_23-40-11/control_pkg/stderr.log
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp:859:35: error: ‘RobotformVel’ is not a member of ‘interfaces::srv’; did you mean ‘RobotVel’?
  859 |   rclcpp::Client<interfaces::srv::RobotformVel>::SharedPtr client;
      |                                   ^~~~~~~~~~~~
      |                                   RobotVel
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp:859:35: error: ‘RobotformVel’ is not a member of ‘interfaces::srv’; did you mean ‘RobotVel’?
  859 |   rclcpp::Client<interfaces::srv::RobotformVel>::SharedPtr client;
      |                                   ^~~~~~~~~~~~
      |                                   RobotVel
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp:859:47: error: template argument 1 is invalid
  859 |   rclcpp::Client<interfaces::srv::RobotformVel>::SharedPtr client;
      |                                               ^
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp:859:50: error: expected ‘;’ at end of member declaration
  859 |   rclcpp::Client<interfaces::srv::RobotformVel>::SharedPtr client;
      |                                                  ^~~~~~~~~
      |                                                           ;
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp:859:60: error: ‘client’ does not name a type
  859 |   rclcpp::Client<interfaces::srv::RobotformVel>::SharedPtr client;
      |                                                            ^~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp: In constructor ‘Control_PID_R2_node::Control_PID_R2_node()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp:189:4: error: ‘client’ was not declared in this scope
  189 |    client = this->create_client<interfaces::srv::RobotVel>("robot2_vel");
      |    ^~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp:204:6: error: ‘LmSw_subscriber’ was not declared in this scope; did you mean ‘count_subscribers’?
  204 |      LmSw_subscriber= create_subscription<interfaces::msg::LimitSwitch>(
      |      ^~~~~~~~~~~~~~~
      |      count_subscribers
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp:207:4: error: ‘velM_subscriber’ was not declared in this scope; did you mean ‘count_subscribers’?
  207 |    velM_subscriber= create_subscription<interfaces::msg::MotorVelsWArm>(
      |    ^~~~~~~~~~~~~~~
      |    count_subscribers
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp: In member function ‘void Control_PID_R2_node::send_vel()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_r2_node.cpp:761:19: error: ‘client’ was not declared in this scope
  761 |     auto result = client->async_send_request(request);
      |                   ^~~~~~
make[2]: *** [CMakeFiles/control_pid_r2_node.dir/build.make:63: CMakeFiles/control_pid_r2_node.dir/src/control_pid_r2_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:84: CMakeFiles/control_pid_r2_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:141: all] Error 2
